feat: 인트로 및 게임오버 화면 구현
- 애니메이션 라이브러리 framer-motion 설치

- 게임 시작(Intro) 및 종료(GameOver) 기능 완료

--- a/src/index.css
+++ b/src/index.css
@@ -9,5 +9,11 @@ html, body {
   overflow: hidden;
 }
 
+@font-face {
+  font-family: "Galmuri11";
+  font-weight: bold;
+  src: url("./features/RunningGame/fonts/Galmuri11_Bold.ttf") format("truetype");
+}
+
 body {
 }
